Closed Bug 396428 Opened 18 years ago Closed 18 years ago

ByteArray isn't the correct endianness on non-windows x86

Categories

(Tamarin Graveyard :: Virtual Machine, defect)

x86
macOS
defect
Not set
normal

Tracking

(Not tracked)

VERIFIED FIXED

People

(Reporter: benjamin, Assigned: markh)

References

Details

Attachments

(1 file)

The ByteArray type isn't the right native endianness on non-windows x86. This is because of a bad #ifdef in shell/DataIO.h. Trivial patch attached.
Attachment #281189 - Flags: review?(treilly)
Attachment #281189 - Flags: review?(treilly) → review+
Fixed on trunk, changeset 165 (049a855c8d5a)
Status: NEW → RESOLVED
Closed: 18 years ago
Resolution: --- → FIXED
The patch caused VS8 builds to fail in the same way: "unknown format xxxx". This implies __i386__ isn't defined by VS8. It appears that Tamarin sets up its own architecture #defines which are used in a number of other places, so changing that line to: \t\t\t#if defined(AVMPLUS_IA32) || defined(AVMPLUS_AMD64) might be a better fix?
Status: RESOLVED → REOPENED
Resolution: FIXED → ---
I don't know. I've only been using the XP build system (where this works fine on VC8).
Assignee: benjamin → mhammond
Status: REOPENED → NEW
Thomas, could you please offer your opinion on my proposed fix? Ideally, if you have a Windows box available, it would be great if you could confirm or deny that it is currently broken on XP and needs *some* fix?
ideally we'd have an endianess define and the selection would take place in avmplus.h, basing it on AVMPLUS_IA32 and AVMPLUS_AMD64 sounds right.
Thanks - checked in 212:0bcb951fa3dd
Status: NEW → RESOLVED
Closed: 18 years ago18 years ago
Resolution: --- → FIXED
Status: RESOLVED → VERIFIED
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: