Bug 396428 - ByteArray isn't the correct endianness on non-Window x86 platforms, r=treilly